2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/fastcgi/configure.in: use AC_LIB_LINKFLAGS to accept
	--with-libfcgi-prefix
	* modules/fastcgi/link.sh.in (NEW_LIBS): use @LIBS@

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/oracle/configure.in: generate link.sh
	* modules/oracle/link.sh.in: renamed from link.sh
	* modules/oracle/Makefile.in (link.sh): remove target

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/fastcgi/configure.in: check for fcgi_stdio.h; generate link.sh
	* modules/fastcgi/link.sh.in: renamed from link.sh
	* modules/fastcgi/Makefile.in (link.sh): remove target

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/configure.in: generate link.sh
	* modules/dirkey/link.sh.in: renamed from link.sh

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (MKNOD): use S(member) instead of
	`CL:MEMBER` to avoid wasting memory

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/regexp/Makefile.in (regexi.o): -I$(srcdir)/gllib
	* modules/syscalls/Makefile.in (calls.o): -I$(srcdir)/gllib
	* modules/wildcard/Makefile.in (wildcard.o): -Igllib -I$(srcdir)/gllib

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c: #include "config.h"

2009-08-10  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): the log is in GNULIB_IMPORTED_LOG

2009-08-10  Sam Steingold  <sds@gnu.org>

	* gllib/btowc.c, gllib/fnmatch.c, gllib/fnmatch.in.h:
	* gllib/fnmatch_loop.c, gllib/malloc.c, gllib/regcomp.c, gllib/regex.c:
	* gllib/regex.h, gllib/regex_internal.c, gllib/regex_internal.h:
	* gllib/regexec.c, gllib/stdlib.in.h, gllib/wcrtomb.c:
	remove files which moved to individual modules

2009-08-09  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): remove unistd, so that it is
	present in both src/gllib and modules/syscalls/gllib because
	unistd.h is generated differently depending on whether
	gethostname (required by uname) is present
	(GNULIB_USERS): new variable