@@ -1,3 +1,10 @@
+2009-08-11  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* spvw_genera1.d (build_old_generation_cache)
+	(rebuild_old_generation_cache): fix g++ build (goto crosses auto vars
+	initialization)
+	* spvw.d (get_module_symbol): add typecast
+
 2009-08-10  Sam Steingold  <sds@gnu.org>
 
 	* modules/fastcgi/configure.in: use AC_LIB_LINKFLAGS to accept
